Top juegos indie
Sección terminada

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     <main class="main">
       <div class="background__div">
         <a href="https://www.instant-gaming.com/es/2462-comprar-grand-theft-auto-vi-pc-juego-rockstar/" class="background__a">
-          <picture class="parallax__picture">
+          <picture class="background__picture">
             <source srcset="/assets/img/gta6-400.jpg" media="(max-width: 400px)" />
             <source srcset="/assets/img/gta6-500.jpg" media="(max-width: 500px)" />
             <source srcset="/assets/img/gta6-700.jpg" media="(max-width: 700px)" />
@@ -813,7 +813,7 @@
         </div>
 
         <a href="https://www.instant-gaming.com/es/2075-comprar-ready-or-not-pc-juego-steam/" class="background__a">
-          <picture class="parallax__picture">
+          <picture class="background__picture">
             <source srcset="/assets/img/2075-400.jpg" media="(max-width: 400px)" />
             <source srcset="/assets/img/2075-500.jpg" media="(max-width: 500px)" />
             <source srcset="/assets/img/2075-700.jpg" media="(max-width: 700px)" />
@@ -833,65 +833,132 @@
                 <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
               </svg>
             </a>
+          </div>
+        </div>
+        <ul class="reviews__container cards">
+          <li class="cards__li">
+            <article class="cards__article">
+              <a href="https://www.instant-gaming.com/es/209-comprar-the-elder-scrolls-v-skyrim-legendary-edition-legendary-edition-pc-juego-steam/" class="cards__link">
+                <img src="/assets/img/the-elder-scrolls-v-skyrim-legendary-edition-legendary-edition-pc-juego-steam-cover.jpg" alt="The Elder Scrolls V: Skyrim Legendary Edition" class="cards__img" />
+                <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/the-elder-scrolls-v-skyrim-legendary-edition-legendary-edition-pc-juego-steam-preview.webm" type="video/webm"></video>
+              </a>
+              <div class="cards__info">
+                <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
+                <img src="/assets/img/icon-like.png" alt="" class="cards__icons" />
+              </div>
+              <div class="cards__text">
+                <p class="cards__p">Diversión infinita. Tiene bugs y eso, es un juego viejo, pero hay tantas cosas para hacer que nunca me aburriré de re jugarlo. Puedes elegir tu estilo de juego, pasar horas sin hacer una misión principal de la historia, solo jugando secundarias, o simplemente cazando, crafteando, mineando. Lo que quieras.</p>
+              </div>
+            </article>
+          </li>
+          <li class="cards__li">
+            <article class="cards__article">
+              <a href="https://www.instant-gaming.com/es/3666-comprar-resident-evil-2-biohazard-re-2-deluxe-edition-deluxe-edition-pc-juego-steam/" class="cards__link">
+                <img src="/assets/img/resident-evil-2-biohazard-re-2-deluxe-edition-deluxe-edition-pc-juego-steam-cover.jpg" alt="Resident Evil 2 Biohazard RE:2 Deluxe Edition" class="cards__img" />
+                <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/resident-evil-2-biohazard-re-2-deluxe-edition-deluxe-edition-pc-juego-steam-preview.webm" type="video/webm"></video>
+              </a>
+              <div class="cards__info">
+                <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
+                <img src="/assets/img/icon-like.png" alt="" class="cards__icons" />
+              </div>
+              <div class="cards__text">
+                <p class="cards__p">Tenía las expectativas altas después de leer tantas opiniones positivas y no me ha defraudado en absoluto. He de añadir que muchas de estas valoraciones comparan el remake con el juego original de 1998; en mi caso no tuve la suerte de probarlo en su momento, así que para mí es una experiencia completamente nueva. Y quería compartir que, desde el punto de vista de alguien que no tiene ni la más remota idea de qué te aguarda detrás de cada puerta, verja o esquina, también resulta totalmente gratificante. Es una sensación de peligro, de tensión constante, de inmersión que no había aportado ninguno de los survival que había probado hasta ahora, y si bien la variedad de extras no es enorme, sí aportan una buena dosis de refresco y rejugabilidad. Por no hablar ya de ese detalle que pocos juegos actuales conocen ya, y que es el no darte todo el camino mascadito para que te puedas devanar los sesos con cada puzle o misterio a resolver. Hay que valorar al juego por lo que es y por lo que aporta, y aquí me quito el sombrero; obviamente no tengo ni la más remota idea de cómo de fiel es al original pero, como juego en sí, Capcom ha hecho un trabajo de renombre.</p>
+              </div>
+            </article>
+          </li>
+          <li class="cards__li">
+            <article class="cards__article">
+              <a href="https://www.instant-gaming.com/es/8310-comprar-mortal-kombat-11-ultimate-ultimate-pc-juego-steam/" class="cards__link">
+                <img src="/assets/img/mortal-kombat-11-ultimate-ultimate-pc-juego-steam-cover.jpg" alt="Mortal Kombat 11 Ultimate" class="cards__img" />
+                <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/mortal-kombat-11-ultimate-ultimate-pc-juego-steam-preview.webm" type="video/webm"></video>
+              </a>
+              <div class="cards__info">
+                <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
+                <img src="/assets/img/icon-dislike.png" alt="" class="cards__icons" />
+              </div>
+              <div class="cards__text">
+                <p class="cards__p">Una p***a basura, no lo recomiendo, tiene buenos gráficos, pero los controles son basura, el personaje se mueve menos que una piedra, tienes que hacer polladas de esas de combinaciones de 20 botones para dar un puñetazo de m***a.</p>
+              </div>
+            </article>
+          </li>
+          <li class="cards__li">
+            <article class="cards__article">
+              <a href="https://www.instant-gaming.com/es/1843-comprar-ubisoft-connect-assassin-s-creed-origins-pc-juego-ubisoft-connect-europe/" class="cards__link">
+                <img src="/assets/img/assassin-s-creed-origins-pc-juego-ubisoft-connect-europe-cover.jpg" alt="Assassin's Creed: Origins" class="cards__img" />
+                <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/assassin-s-creed-origins-pc-juego-ubisoft-connect-europe-preview.webm" type="video/webm"></video>
+              </a>
+              <div class="cards__info">
+                <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
+                <img src="/assets/img/icon-like.png" alt="" class="cards__icons" />
+              </div>
+              <div class="cards__text">
+                <p class="cards__p">Gran juego, basada en egipto, con mundo abierto, muchas horas de juegos, con infinitas misiones secundarias, buenos graficos, y buena jugabilidad. La historia principal podria mejorar un poco pero es aceptable.</p>
+              </div>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section class="indie__section">
+        <div class="indie__background">
+          <div class="indie__character"></div>
+          <div class="indie__column">
+            <a href="https://www.instant-gaming.com/es/busquedas/?cat[]=32" class="indie__link">
+              <h2 class="indie__h2">Top juegos indie</h2>
+              <svg xmlns="http://www.w3.org/2000/svg" class="indie__svg" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+              </svg>
+            </a>
 
-            <ul class="reviews__container cards">
-              <li class="cards__li">
-                <article class="cards__article">
-                  <a href="https://www.instant-gaming.com/es/209-comprar-the-elder-scrolls-v-skyrim-legendary-edition-legendary-edition-pc-juego-steam/" class="cards__link">
-                    <img src="/assets/img/the-elder-scrolls-v-skyrim-legendary-edition-legendary-edition-pc-juego-steam-cover.jpg" alt="The Elder Scrolls V: Skyrim Legendary Edition" class="cards__img" />
-                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/the-elder-scrolls-v-skyrim-legendary-edition-legendary-edition-pc-juego-steam-preview.webm" type="video/webm"></video>
+            <ul class="indie__container listingindie">
+              <li class="listingindie__li">
+                <article class="listingindie__article">
+                  <a href="https://www.instant-gaming.com/es/15069-comprar-the-front-pc-juego-steam/" class="listingindie__link">
+                    <img src="/assets/img/the-front-pc-juego-steam-cover.jpg" alt="The Front" class="listingindie__img" />
+                    <video class="listingindie__video" preload="none" loop muted playsinline src="/assets/video/the-front-pc-juego-steam-preview.webm" type="video/webm"></video>
+                    <div class="listingindie__discount">-16%</div>
                   </a>
-                  <div class="cards__info">
-                    <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
-                    <img src="/assets/img/icon-like.png" alt="" class="cards__icons" />
-                  </div>
-                  <div class="cards__text">
-                    <p class="cards__p">Diversión infinita. Tiene bugs y eso, es un juego viejo, pero hay tantas cosas para hacer que nunca me aburriré de re jugarlo. Puedes elegir tu estilo de juego, pasar horas sin hacer una misión principal de la historia, solo jugando secundarias, o simplemente cazando, crafteando, mineando. Lo que quieras.</p>
+                  <div class="listingindie__info">
+                    <h3 class="listingindie__name">The Front</h3>
+                    <span class="listingindie__price">16.31€</span>
                   </div>
                 </article>
               </li>
-              <li class="cards__li">
-                <article class="cards__article">
-                  <a href="https://www.instant-gaming.com/es/3666-comprar-resident-evil-2-biohazard-re-2-deluxe-edition-deluxe-edition-pc-juego-steam/" class="cards__link">
-                    <img src="/assets/img/resident-evil-2-biohazard-re-2-deluxe-edition-deluxe-edition-pc-juego-steam-cover.jpg" alt="Resident Evil 2 Biohazard RE:2 Deluxe Edition" class="cards__img" />
-                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/resident-evil-2-biohazard-re-2-deluxe-edition-deluxe-edition-pc-juego-steam-preview.webm" type="video/webm"></video>
+              <li class="listingindie__li">
+                <article class="listingindie__article">
+                  <a href="https://www.instant-gaming.com/es/13618-comprar-for-the-king-ii-pc-juego-steam-europe/" class="listingindie__link">
+                    <img src="/assets/img/for-the-king-ii-pc-juego-steam-europe-cover.jpg" alt="For The King II" class="listingindie__img" />
+                    <video class="listingindie__video" preload="none" loop muted playsinline src="/assets/video/for-the-king-ii-pc-juego-steam-europe-preview.webm" type="video/webm"></video>
+                    <div class="listingindie__discount">-35%</div>
                   </a>
-                  <div class="cards__info">
-                    <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
-                    <img src="/assets/img/icon-like.png" alt="" class="cards__icons" />
-                  </div>
-                  <div class="cards__text">
-                    <p class="cards__p">Tenía las expectativas altas después de leer tantas opiniones positivas y no me ha defraudado en absoluto. He de añadir que muchas de estas valoraciones comparan el remake con el juego original de 1998; en mi caso no tuve la suerte de probarlo en su momento, así que para mí es una experiencia completamente nueva. Y quería compartir que, desde el punto de vista de alguien que no tiene ni la más remota idea de qué te aguarda detrás de cada puerta, verja o esquina, también resulta totalmente gratificante. Es una sensación de peligro, de tensión constante, de inmersión que no había aportado ninguno de los survival que había probado hasta ahora, y si bien la variedad de extras no es enorme, sí aportan una buena dosis de refresco y rejugabilidad. Por no hablar ya de ese detalle que pocos juegos actuales conocen ya, y que es el no darte todo el camino mascadito para que te puedas devanar los sesos con cada puzle o misterio a resolver. Hay que valorar al juego por lo que es y por lo que aporta, y aquí me quito el sombrero; obviamente no tengo ni la más remota idea de cómo de fiel es al original pero, como juego en sí, Capcom ha hecho un trabajo de renombre.</p>
+                  <div class="listingindie__info">
+                    <h3 class="listingindie__name">For The King II</h3>
+                    <span class="listingindie__price">16.23€</span>
                   </div>
                 </article>
               </li>
-              <li class="cards__li">
-                <article class="cards__article">
-                  <a href="https://www.instant-gaming.com/es/8310-comprar-mortal-kombat-11-ultimate-ultimate-pc-juego-steam/" class="cards__link">
-                    <img src="/assets/img/mortal-kombat-11-ultimate-ultimate-pc-juego-steam-cover.jpg" alt="Mortal Kombat 11 Ultimate" class="cards__img" />
-                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/mortal-kombat-11-ultimate-ultimate-pc-juego-steam-preview.webm" type="video/webm"></video>
+              <li class="listingindie__li">
+                <article class="listingindie__article">
+                  <a href="https://www.instant-gaming.com/es/14828-comprar-sunkenland-pc-juego-steam/" class="listingindie__link">
+                    <img src="/assets/img/sunkenland-pc-juego-steam-cover.jpg" alt="Sunkenland" class="listingindie__img" />
+                    <video class="listingindie__video" preload="none" loop muted playsinline src="/assets/video/sunkenland-pc-juego-steam-preview.webm" type="video/webm"></video>
+                    <div class="listingindie__discount">-26%</div>
                   </a>
-                  <div class="cards__info">
-                    <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
-                    <img src="/assets/img/icon-dislike.png" alt="" class="cards__icons" />
-                  </div>
-                  <div class="cards__text">
-                    <p class="cards__p">Una p***a basura, no lo recomiendo, tiene buenos gráficos, pero los controles son basura, el personaje se mueve menos que una piedra, tienes que hacer polladas de esas de combinaciones de 20 botones para dar un puñetazo de m***a.</p>
+                  <div class="listingindie__info">
+                    <h3 class="listingindie__name">Sunkenland</h3>
+                    <span class="listingindie__price">14.47€</span>
                   </div>
                 </article>
               </li>
-              <li class="cards__li">
-                <article class="cards__article">
-                  <a href="https://www.instant-gaming.com/es/1843-comprar-ubisoft-connect-assassin-s-creed-origins-pc-juego-ubisoft-connect-europe/" class="cards__link">
-                    <img src="/assets/img/assassin-s-creed-origins-pc-juego-ubisoft-connect-europe-cover.jpg" alt="Assassin's Creed: Origins" class="cards__img" />
-                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/assassin-s-creed-origins-pc-juego-ubisoft-connect-europe-preview.webm" type="video/webm"></video>
+              <li class="listingindie__li">
+                <article class="listingindie__article">
+                  <a href="https://www.instant-gaming.com/es/14242-comprar-dave-the-diver-pc-mac-juego-steam/" class="listingindie__link">
+                    <img src="/assets/img/dave-the-diver-pc-mac-juego-steam-cover.jpg" alt="Dave The Diver" class="listingindie__img" />
+                    <video class="listingindie__video" preload="none" loop muted playsinline src="/assets/video/dave-the-diver-pc-mac-juego-steam-preview.webm" type="video/webm"></video>
+                    <div class="listingindie__discount">-25%</div>
                   </a>
-                  <div class="cards__info">
-                    <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
-                    <img src="/assets/img/icon-like.png" alt="" class="cards__icons" />
-                  </div>
-                  <div class="cards__text">
-                    <p class="cards__p">Gran juego, basada en egipto, con mundo abierto, muchas horas de juegos, con infinitas misiones secundarias, buenos graficos, y buena jugabilidad. La historia principal podria mejorar un poco pero es aceptable.</p>
+                  <div class="listingindie__info">
+                    <h3 class="listingindie__name">Dave The Diver</h3>
+                    <span class="listingindie__price">14.99€</span>
                   </div>
                 </article>
               </li>
