--- a/index.html
+++ b/index.html
@@ -966,6 +966,53 @@
           </div>
         </div>
       </section>
+      <section class="news__section">
+        <div class="news__wrapper narrow__wrapper">
+          <div class="news__column">
+            <a href="https://www.instant-gaming.com/es/busquedas/" class="news__link">
+              <h2 class="news__h2">Noticias que no te puedes perder</h2>
+              <svg xmlns="http://www.w3.org/2000/svg" class="news__svg" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+              </svg>
+            </a>
+
+            <ul class="news__container listingnews">
+              <li class="news__li">
+                <a href="https://news.instant-gaming.com/es/articulos/4215-las-vision-pro-las-vr-de-apple-estaran-disponible-en-estados-unidos-a-partir-del-2-de-febrero-por-3-499?utm_source=igStore&utm_campaign=home" class="news__a">
+                  <img src="/assets/img/las-vision-pro-las-vr-de-apple-estaran-disponible-en-estados-unidos-a-partir-del-2-de-febrero-por-3-499-cover659c168a8eafa.jpg" alt="Vision Pro" class="news__img" />
+                  <div class="news__div">
+                    <span class="news__date">hace 31 minutos</span>
+                    <h4 class="news__h4">Las Vision Pro, las VR de Apple, estarán disponible en Estados Unidos a partir del 2 de febrero por 3.499 $</h4>
+                    <p class="news__p">Apple ha anunciado finalmente la fecha oficial de lanzamiento de su casco de realidad mixta Vision Pro, prevista para el 2 de febrero en Estados Unidos. Los pedidos anticipados se abren el 19 de enero. Costará 3.499 $ y, por ese precio, solo viene con 256 GB de almacenamiento.</p>
+                  </div>
+                </a>
+                <div class="news__separator"></div>
+              </li>
+              <li class="news__li">
+                <a href="https://news.instant-gaming.com/es/articulos/4214-ea-sports-fc-24-ha-lidero-las-listas-de-ventas-del-reino-unido-en-diciembre?utm_source=igStore&utm_campaign=home" class="news__a">
+                  <img src="/assets/img/ea-sports-fc-24-ha-lidero-las-listas-de-ventas-del-reino-unido-en-diciembre-cover659bf85c9bdef.jpg" alt="EA Sports" class="news__img" />
+                  <div class="news__div">
+                    <span class="news__date">hace 3 horas</span>
+                    <h4 class="news__h4">EA Sports FC 24 ha lideró las listas de ventas del Reino Unido en diciembre</h4>
+                    <p class="news__p">EA Sports FC 24 lo ha petado estas fiestas. El juego encabezó las listas de los más vendidos del Reino Unido este pasado diciembre. Viene seguido muy de cerca por Call of Duty: Modern Warfare 3 en segundo lugar y Hogwarts Legacy en tercero. Avatar: Frontiers of Pandora entra en el top 10 ocupando un…</p>
+                  </div>
+                </a>
+                <div class="news__separator"></div>
+              </li>
+              <li class="news__li">
+                <a href="https://news.instant-gaming.com/es/articulos/4213-segun-unas-filtraciones-la-grafica-rx-7600-xt-de-amd-saldra-el-24-de-enero-por-329?utm_source=igStore&utm_campaign=home" class="news__a">
+                  <img src="/assets/img/segun-unas-filtraciones-la-grafica-rx-7600-xt-de-amd-saldra-el-24-de-enero-por-329-cover659bf4a42684f.jpg" alt="RX 7600" class="news__img" />
+                  <div class="news__div">
+                    <span class="news__date">hace 5 horas</span>
+                    <h4 class="news__h4">Según unas filtraciones, la gráfica RX 7600 XT de AMD saldrá el 24 de enero por 329 $</h4>
+                    <p class="news__p">Parece que en AMD no han conseguido mantener el secreto. Una vez más, la GPU RX 7600 XT ha vuelto a ser objeto de filtraciones. Esta vez le ha tocado a su probable fecha de lanzamiento, así como el precio. La nueva tarjeta gráfica de la compañía saldrá a la venta el 24 de enero a un precio de 329 $.…</p>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
