--- a/index.html
+++ b/index.html
@@ -1013,6 +1013,200 @@
           </div>
         </div>
       </section>
+      <section class="categories__section">
+        <div class="categories__wrapper narrow__wrapper">
+          <div class="categories__column">
+            <div class="categories__flex">
+              <h2 class="categories__h2">Categorías</h2>
+              <button class="categories__btn"><span class="categories__span">Ver todo</span></button>
+            </div>
+            <ul class="categories__container catgrid">
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background1.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="/assets/img/category-icon1.png" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background2.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="/assets/img/category-icon2.png" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background4.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background5.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background8.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background24.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background54.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background53.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background16.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background37.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background17.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background9.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background35.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background10.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background32.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background7.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background12.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background23.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background13.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background51.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background11.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background55.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background15.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background47.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background31.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+              <li class="catgrid__cat">
+                <a href="" class="catgrid__a">
+                  <img src="/assets/img/category-background18.jpg" alt="" class="catgrid__background" />
+                  <span class="catgrid__name">Acción</span>
+                  <img src="" alt="" class="catgrid__icon" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
